--- a/style.css
+++ b/style.css
@@ -36,16 +36,40 @@ header{
     border-radius: 20px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    border: 5px solid white;
+    justify-content: space-between;
+    border: solid white;
     gap: 20px;
+}
+
+#head_main {
+    border-width: 0px;
+}
+
+.head_back{
+    padding: 15px;
+    border: solid white;
+    border-radius: 15px;
+    background: black;
+}
+
+#back_for_head{
+    border-width: 0px;
+}
+
+#headbackdef{
+    color: white;
+    font-size: 24px;
 }
 
 .senter_field{
     padding: 15px;
-    border: 5px solid white;
+    border: solid white;
     border-radius: 15px;
     background: black;
+}
+
+#senders_area{
+    border-width: 0px;
 }
 
 #senter_def{
@@ -55,9 +79,13 @@ header{
 
 .sent_Field{
     padding: 15px;
-    border: 5px solid white;
+    border: solid white;
     border-radius: 15px;
     background: black;
+}
+
+#sent_fieldarea{
+    border-width: 0px;
 }
 
 #sent_def{
@@ -82,6 +110,7 @@ main{
     top: 170px;
     border-radius: 15px;
     z-index: 1;
+
 }
 
 .keyboard_inner{
@@ -143,6 +172,10 @@ main{
     display: none;
 }
 
+.for_upper{
+    opacity: 0.5;
+}
+
 .char_line4 button:nth-child(3){
     width: 250px;
 }
@@ -179,4 +212,20 @@ main{
     width: 100%;
     background: gray;
     padding: 25px;
+}
+
+.main_area{
+    width: 100%;
+    height: 70vh;
+    padding: 20px;
+    background-color: black;
+    color: white;
+    font-size: 20px;
+    border-radius: 15px;
+    border: solid white;
+}
+
+
+#main_text {
+    border-width: 0px;
 }
